feat: Refactor RedisService to use LoggingService for logging and improve error handling
feat: Update morgan middleware to use IUser type for user property

refactor: Simplify QuerySpecificationDto by removing unnecessary comments

feat: Add utility function to generate slugs and improve random string generation

fix: Correctly reference user ID in AuthService for token blacklisting

feat: Export ShopService from ShopModule for better modularity

feat: Enhance ShopService with return types for findShopById

feat: Create DTOs for SKU management including create, query, and update operations

feat: Implement SKU entity with necessary fields and types

feat: Add SkuController for handling SKU-related requests

feat: Create SkuModule to encapsulate SKU-related functionality

feat: Implement SkuService with caching and database retrieval logic

feat: Enhance SPUs with detailed validation and management logic

feat: Update SPU entity to include new fields and types

feat: Refactor SpuController to handle requests with improved parameter handling

feat: Update SpuModule to include necessary imports and dependencies

feat: Implement comprehensive SpuService with transaction management and validation

feat: Define types for product variations and SKU items for better type safety

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /dist
 /node_modules
 /build
+/environments
 
 # Logs
 npm-debug.log*
@@ -52,3 +53,5 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+
