--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
       "passport-local": "^1.0.0",
       "reflect-metadata": "^0.2.2",
       "rxjs": "^7.8.1",
+      "slugify": "^1.6.6",
       "typeorm": "^0.3.21",
       "uuid": "^11.1.0",
       "winston": "^3.17.0"
