--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
       "lodash": "^4.17.21",
       "log4js": "^6.9.1",
       "morgan": "^1.10.0",
+      "multer": "^2.0.1",
       "mysql2": "^3.14.0",
       "passport": "^0.7.0",
       "passport-jwt": "^4.0.1",
@@ -68,6 +69,7 @@
       "@types/jest": "^29.5.14",
       "@types/lodash": "^4.17.16",
       "@types/morgan": "^1.9.9",
+      "@types/multer": "^1.4.13",
       "@types/node": "^22.10.7",
       "@types/passport-jwt": "^4.0.1",
       "@types/passport-local": "^1.0.38",
