--- a/package.json
+++ b/package.json
@@ -22,13 +22,17 @@
    },
    "dependencies": {
       "@faker-js/faker": "^9.7.0",
+      "@godaddy/terminus": "^4.12.1",
+      "@nestjs/axios": "^4.0.0",
       "@nestjs/common": "^11.0.1",
       "@nestjs/core": "^11.0.1",
       "@nestjs/jwt": "^11.0.0",
       "@nestjs/mapped-types": "*",
       "@nestjs/passport": "^11.0.5",
       "@nestjs/platform-express": "^11.0.1",
+      "@nestjs/terminus": "^11.0.0",
       "@nestjs/typeorm": "^11.0.0",
+      "axios": "^1.10.0",
       "chalk": "^5.4.1",
       "class-transformer": "^0.5.1",
       "class-validator": "^0.14.1",
@@ -44,6 +48,7 @@
       "morgan": "^1.10.0",
       "multer": "^2.0.1",
       "mysql2": "^3.14.0",
+      "opossum": "^9.0.0",
       "passport": "^0.7.0",
       "passport-jwt": "^4.0.1",
       "passport-local": "^1.0.0",
