--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -5,21 +5,41 @@ networks:
       driver: bridge
 
 services:
-   mysql:
-      image: mysql:8.0
-      container_name: mysql-container
+   # mysql:
+   #    image: mysql:8.0
+   #    container_name: mysql-container
+   #    volumes:
+   #       - ./environments/mysql:/var/lib/mysql
+   #    command: [
+   #          '--character-set-server=utf8mb4',
+   #          '--collation-server=utf8mb4_unicode_ci',
+   #          '--skip-character-set-client-handshake', # Buộc tất cả kết nối sử dụng utf8mb4
+   #       ]
+   #    environment:
+   #       MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+   #       MYSQL_DATABASE: ${DB_DATABASE}
+   #       MYSQL_PASSWORD: ${DB_PASSWORD}
+   #    ports:
+   #       - '8811:3306'
+   #    networks:
+   #       - nest-app-network
+
+   prometheus:
+      image: prom/prometheus:latest
+      container_name: pre-event-prometheus
+      restart: unless-stopped
       volumes:
-         - ./environments/mysql:/var/lib/mysql
-      command: [
-            '--character-set-server=utf8mb4',
-            '--collation-server=utf8mb4_unicode_ci',
-            '--skip-character-set-client-handshake', # Buộc tất cả kết nối sử dụng utf8mb4
-         ]
-      environment:
-         MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
-         MYSQL_DATABASE: ${DB_DATABASE}
-         MYSQL_PASSWORD: ${DB_PASSWORD}
+         - ./environments/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+         - ./environments/data/prometheus_data:/prometheus
+      command:
+         - '--config.file=/etc/prometheus/prometheus.yml'
+         - '--storage.tsdb.path=/prometheus'
+         - '--web.console.libraries=/etc/prometheus/console_libraries'
+         - '--web.console.templates=/etc/prometheus/consoles'
+         - '--web.enable-lifecycle'
+      extra_hosts:
+         - host.docker.internal:host-gateway
       ports:
-         - '8811:3306'
+         - '9090:9090'
       networks:
          - nest-app-network
