--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
       "@nestjs/platform-express": "^11.0.1",
       "@nestjs/terminus": "^11.0.0",
       "@nestjs/typeorm": "^11.0.0",
+      "@willsoto/nestjs-prometheus": "^6.0.2",
       "axios": "^1.10.0",
       "chalk": "^5.4.1",
       "class-transformer": "^0.5.1",
@@ -52,6 +53,7 @@
       "passport": "^0.7.0",
       "passport-jwt": "^4.0.1",
       "passport-local": "^1.0.0",
+      "prom-client": "^15.1.3",
       "reflect-metadata": "^0.2.2",
       "rxjs": "^7.8.1",
       "slugify": "^1.6.6",
