--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -43,3 +43,39 @@ services:
          - '9090:9090'
       networks:
          - nest-app-network
+
+   grafana:
+      image: grafana/grafana
+      container_name: pre-event-grafana
+      hostname: grafana
+      environment:
+         - GF_SECURITY_ADMIN_PASSWORD=admin
+         - GF_USERS_ALLOW_SING_UP=false
+         - GF_SERVER_DOMAIN=localhost
+         #enable logger
+         - GF_LOG_MODE=console file
+         - GF_LOG_FILTERS=alerting.notifier.slack:debug alermanager:debug ngalert:debug
+      volumes:
+         - ./environments/data/grafana-storage:/var/lib/grafana
+      ports:
+         - '3000:3000'
+      networks:
+         - nest-app-network
+
+   node-exporter:
+      image: prom/node-exporter:latest
+      container_name: pre-event-node-exporter
+      restart: unless-stopped
+      volumes:
+         - /proc:/host/proc:ro
+         - /sys:/host/sys:ro
+         - /:/rootfs:ro
+      command:
+         - --path.procfs=/host/proc
+         - --path.rootfs=/rootfs
+         - --path.sysfs=/host/sys
+         - --collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)
+      ports:
+         - '9100:9100'
+      networks:
+         - nest-app-network
