--- a/environments/prometheus/prometheus.yml
+++ b/environments/prometheus/prometheus.yml
@@ -18,3 +18,9 @@ scrape_configs:
      scrape_interval: 5s
      static_configs:
         - targets: ['host.docker.internal:9100']
+
+   - job_name: 'ecommerce-mysqld-exporter'
+     scrape_interval: 5s
+     static_configs:
+        - targets: ['host.docker.internal:9104']
+     metrics_path: '/metrics'
