--- a/environments/prometheus/prometheus.yml
+++ b/environments/prometheus/prometheus.yml
@@ -24,3 +24,9 @@ scrape_configs:
      static_configs:
         - targets: ['host.docker.internal:9104']
      metrics_path: '/metrics'
+
+   - job_name: 'ecommerce-redis-exporter'
+     scrape_interval: 5s
+     static_configs:
+        - targets: ['host.docker.internal:9121']
+     metrics_path: '/metrics'
