--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
    "dependencies": {
       "@faker-js/faker": "^9.7.0",
       "@godaddy/terminus": "^4.12.1",
+      "@log4js-node/logstash-http": "^1.1.0",
       "@nestjs/axios": "^4.0.0",
       "@nestjs/common": "^11.0.1",
       "@nestjs/core": "^11.0.1",
