feat(cart): implement cart module with CRUD operations
- Added CartController to handle cart-related requests.
- Implemented CartService for business logic and database interactions.
- Created Cart entity for TypeORM integration.
- Introduced DTOs for creating and updating cart items.
- Added QuantityAction enum for managing cart item quantity changes.
- Integrated CartModule into the main application module.
- Updated SkuModule to export SkuService for cart operations.
- Added local cache image for documentation.
- Enhanced database documentation with MySQL best practices.

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,5 @@
 {
-  "singleQuote": true,
-  "trailingComma": "all",
-  "endOfLine": "lf",
-  "bracketSpacing": false
+   "singleQuote": true,
+   "trailingComma": "all",
+   "endOfLine": "lf"
 }
