feat(cart):  Adjusted `Cart` entity to reflect changes in the database schema,add cart entity, migration, and service methods.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
       "@godaddy/terminus": "^4.12.1",
       "@log4js-node/logstash-http": "^1.1.0",
       "@nestjs/axios": "^4.0.0",
+      "@nestjs/cache-manager": "^3.0.1",
       "@nestjs/common": "^11.0.1",
       "@nestjs/core": "^11.0.1",
       "@nestjs/jwt": "^11.0.0",
@@ -35,6 +36,7 @@
       "@nestjs/typeorm": "^11.0.0",
       "@willsoto/nestjs-prometheus": "^6.0.2",
       "axios": "^1.10.0",
+      "cache-manager": "^7.0.1",
       "chalk": "^5.4.1",
       "class-transformer": "^0.5.1",
       "class-validator": "^0.14.1",
