--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
       "@nestjs/axios": "^4.0.0",
       "@nestjs/cache-manager": "^3.0.1",
       "@nestjs/common": "^11.0.1",
-      "@nestjs/core": "^11.0.1",
+      "@nestjs/core": "^11.1.6",
       "@nestjs/jwt": "^11.0.0",
       "@nestjs/mapped-types": "*",
+      "@nestjs/microservices": "^11.1.6",
       "@nestjs/passport": "^11.0.5",
       "@nestjs/platform-express": "^11.0.1",
       "@nestjs/terminus": "^11.0.0",
@@ -47,6 +48,7 @@
       "helmet": "^8.1.0",
       "ioredis": "^5.6.0",
       "ip": "^2.0.1",
+      "kafkajs": "^2.2.4",
       "lodash": "^4.17.21",
       "log4js": "^6.9.1",
       "morgan": "^1.10.0",
